fixes for detail view overflow & misc

--- a/frontend/src/modules/community-hub/style.module.scss
+++ b/frontend/src/modules/community-hub/style.module.scss
@@ -8,6 +8,11 @@
   }
 }
 
+.detailViewContainer {
+  padding: 30px 0;
+  overflow-x: hidden;
+}
+
 .detailView {
   :global {
     .header {
